[package]
name = "claude-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http2"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
rand = "0.9"
serde_json = "1"
shellexpand = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
